# brandons-pi-project

./: .stxxl.txt  CMakeLists.txt  a.out
old/: chunky-fio.cpp  chunky-fio.h  chunky-io.cpp  chunky-io.h  misc.cu  number-theory.cu  residue-int copy.h  residue-int.cu  resource-manager.h
scripts/: create-residue-files.bash  handle-disks.py  set_env.fish  valgrind-profile.bash
src/: chunky-fio.cpp  chunky-fio.h  debug.cpp  debug.h  main.cpp  moduli-set.cpp  moduli-set.h  residue-int.cpp  residue-int.h  thread-pool.cpp  thread-pool.h
tests/: a.out  io_uring_cat.c  test-chunky-fio.cpp  test-err.c  test-io-speeds.cpp  test-rint.c
